# agnoLegalAgent

./: .env  .env.example  README.md  pyproject.toml
app/: __init__.py  main.py
app/__pycache__/: __init__.cpython-313.pyc.2135433487024  main.cpython-313.pyc.2135438920656
app/api/: __init__.py  routes.py
app/api/__pycache__/: __init__.cpython-313.pyc.2135438439712  routes.cpython-313.pyc.1634460756304  routes.cpython-313.pyc.1650692257168  routes.cpython-313.pyc.2023420191760  routes.cpython-313.pyc.2135433487024
app/core/: __init__.py  agents.py  classifier.py  config.py  document_loader.py  extraction_utils.py  graph_utils.py  observability.py  playbooks.py  schemas.py  service.py  service_v2.py
app/core/__pycache__/: __init__.cpython-313.pyc.2135438439712  agents.cpython-313.pyc.1636316656368  agents.cpython-313.pyc.2064264703296  agents.cpython-313.pyc.2135433487024  agents.cpython-313.pyc.2211564141600  (+46 more)
playbooks/: default.json  employment_agreement_india.json  lease_agreement_india.json  loan_agreement_india.json  nda_india.json  policy_global.json  service_agreement_india.json  shareholders_agreement_india.json
tests/: test_playbooks.py  test_routes.py  test_service_json.py  test_service_v2.py
tests/__pycache__/: test_playbooks.cpython-313.pyc.2211532308656  test_routes.cpython-313.pyc.2023362571584  test_service_json.cpython-313.pyc.1694188044592  test_service_json.cpython-313.pyc.2361259720752  test_service_v2.cpython-313.pyc.1693949079472  test_service_v2.cpython-313.pyc.2361259720880  test_service_v2.cpython-313.pyc.2555634707632
