[project]
name = "legal-agent"
version = "0.1.0"
description = "Agno + Ollama legal document extraction backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "agno>=1.8.0",
  "ollama>=0.4.0",
  "pypdf>=6.9.2",
  "python-docx>=1.1.2",
  "openai>=2.30.0",
  "docling>=2.84.0",
  "asyncio>=4.0.0",
  "langsmith>=0.7.24",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
